@@ -171,6 +171,7 @@ in a negative namespace (which is invalid).
   is empty, for consistency with list=recentchanges
 * (bug 19721) API action=help should have a way to just list for a specific module
 * (bug 23458) Add support for pageid parameter to action=parse requests
+* (bug 23460) Parse action should have a section option
 
 === Languages updated in 1.17 ===
 
